Name:                git
Version:             0.2.1
Synopsis:            Git operations in haskell
Description:
    .
    A Haskell implementation of git storage operations, allowing users
    to manipulate git repositories (read and write).
    .
    This implementation is fully interoperable with the main C implementation.
    .
    This is strictly only manipulating the git store (what's inside the .git directory),
    and doesn't do anything with the index or your working directory files.
    .
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Category:            Development
Stability:           experimental
Build-Type:          Simple
Homepage:            https://github.com/vincenthz/hs-git
tested-with:         GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.2
Cabal-Version:       >=1.8
data-files:          README.md
extra-source-files:  tests/*.hs

Library
  Build-Depends:     base >= 4 && < 5
                   , bytestring >= 0.9
                   , byteable
                   , containers
                   , memory >= 0.13
                   , cryptonite >= 0.22
                   , vector
                   , random
                   , zlib
                   , zlib-bindings >= 0.1 && < 0.2
                   , hourglass >= 0.2
                   , unix-compat
                   , utf8-string
                   , patience
                   -- to remove
                   , system-filepath
                   , system-fileio
  Exposed-modules:   Data.Git
                     Data.Git.Monad
                     Data.Git.Types
                     Data.Git.Storage
                     Data.Git.Storage.PackIndex
                     Data.Git.Storage.Pack
                     Data.Git.Storage.Object
                     Data.Git.Storage.Loose
                     Data.Git.Named
                     Data.Git.Delta
                     Data.Git.Ref
                     Data.Git.Revision
                     Data.Git.Repository
                     Data.Git.Diff
  Other-modules:     Data.Git.Internal
                     Data.Git.Imports
                     Data.Git.OS
                     Data.Git.Config
                     Data.Git.Storage.FileReader
                     Data.Git.Storage.FileWriter
                     Data.Git.Storage.CacheFile
                     Data.Git.Path
                     Data.Git.Parser
                     Data.Git.WorkTree
  ghc-options:       -Wall -fno-warn-unused-imports
 -- -fno-warn-missing-signatures


Test-Suite test-unit
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  Main-Is:           Tests.hs
  Build-depends:     base >= 3 && < 7
                   , bytestring
                   , tasty
                   , tasty-quickcheck
                   , hourglass
                   , git

Test-Suite test-repository
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  Main-Is:           Repo.hs
  other-modules:     Monad
  Build-depends:     base >= 3 && < 7
                   , bytestring
                   , tasty
                   , tasty-quickcheck
                   , hourglass
                   , bytedump >= 1.0
                   , git

source-repository head
  type: git
  location: https://github.com/vincenthz/hs-git
